--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ buildscript {
 
 plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
-    id 'net.minecrell.vanillagradle.server' version '2.2-6'
 }
 
+apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'org.spongepowered.mixin'
 
 sourceSets {
@@ -35,12 +35,13 @@ repositories {
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.3.0-SNAPSHOT'
-    compile 'org.spongepowered:mixin:0.8'
+    compile 'org.spongepowered:mixin:0.8-SNAPSHOT'
 }
 
 minecraft {
-    version = '1.12.2'
+    version = '1.12.2-14.23.5.2847'
     mappings = 'stable_39'
+    makeObfSourceJar = false
 }
 
 jar {
