--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 
 plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
+    id 'maven-publish'
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
@@ -29,9 +30,7 @@ sourceSets {
     }
 }
 
-repositories {
-    mavenLocal()
-}
+group 'io.github.pulverizer'
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.0'
@@ -55,5 +54,13 @@ jar {
                 'MixinConfigs': 'mixins.movecraft.json',
                 'FMLCorePluginContainsFMLMod': 'true'
         )
+    }
+}
+
+publishing {
+    publications {
+        movecraft(MavenPublication) {
+            from components.java
+        }
     }
 }
